# GenshinCalculator

./: .gitignore  Artifact.cpp  Artifact.h  CMakeLists.txt  Character.cpp  Character.h  Condition.h  Deployment.cpp  Deployment.h  Gcsim_Script.cpp  Gcsim_Script.h  Group.cpp  Group.h  README.md  Reinforced_Artifact.cpp  Reinforced_Artifact.h  Weapon.cpp  Weapon.h  main.cpp
